@@ -1,3 +1,10 @@
+2016-06-21 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCicode.c:
+	  Fix bug #1841.
+	* device/include/stdbool.h:
+	  Minor cleanup.
+
 2016-06-19 Philipp Klaus Krause <pkk AT spth.de>
 
 	* doc/sdccman.lyx,
